--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.7.7"
+    "axios": "^1.7.7",
+    "node-fetch": "^3.3.2"
   }
 }
